// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsTableUrlCell > should render with empty input field 1`] = `
<td
  className="align-middle [&:has([role=checkbox])]:pr-0 break-all p-0 px-4 py-2"
>
  <input
    className="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    name="url"
    onChange={[Function]}
    value=""
  />
</td>
`;

exports[`SettingsTableUrlCell > should render with empty url 1`] = `
<td
  className="align-middle [&:has([role=checkbox])]:pr-0 break-all p-0 px-4 py-2"
>
  <div
    className="flex items-center justify-between gap-8"
  >
    -
  </div>
</td>
`;

exports[`SettingsTableUrlCell > should render with filled input field 1`] = `
<td
  className="align-middle [&:has([role=checkbox])]:pr-0 break-all p-0 px-4 py-2"
>
  <input
    className="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
    name="url"
    onChange={[Function]}
    value="https://example.com"
  />
</td>
`;

exports[`SettingsTableUrlCell > should render with filled url and copy button 1`] = `
<td
  className="align-middle [&:has([role=checkbox])]:pr-0 break-all p-0 px-4 py-2"
>
  <div
    className="flex items-center justify-between gap-8"
  >
    <a
      className="hover:underline"
      href="https://example.com"
      rel="noreferrer noopener"
      target="_blank"
    >
      https://example.com
    </a>
    <button
      className="p-2"
      data-state="closed"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onPointerDown={[Function]}
      onPointerLeave={[Function]}
      onPointerMove={[Function]}
    >
      <svg
        className="lucide lucide-clipboard"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="4"
          rx="1"
          ry="1"
          width="8"
          x="8"
          y="2"
        />
        <path
          d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
        />
      </svg>
    </button>
  </div>
</td>
`;
